adjust neural network parameters

--- a/docs/raport.tex
+++ b/docs/raport.tex
@@ -3,6 +3,7 @@
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage{graphicx}
+\usepackage{hyperref}
 
 \begin{document}
 
@@ -12,6 +13,8 @@
 \maketitle
 
 \newpage
+Link do projekt na github.com:\\
+\href{https://github.com/MichalMitros/GrammaticalFacialExpression}{https://github.com/MichalMitros/GrammaticalFacialExpression}
 \section{Cel badania}
 \hspace{1cm}Celem badania jest wyznaczenie modelu klasyfikatora zdolnego do odróżniania gestów na twarzy człowieka na podstawie zapisów z kamer \textsl{Microsoft Kinect} (kamer z sensorami głębi umożliwiających wyznaczenie trójwymiarowej mapy twarzy). Model powinien powstać w wyniku uczenia na podstawie dostarczonego zbioru danych \textsl{Grammatical Facial Expression}.
 
