update report version

--- a/docs/raport.tex
+++ b/docs/raport.tex
@@ -7,9 +7,9 @@
 
 \begin{document}
 
-\title{Raport (I wersja) - Grammatical Facial Expression}
+\title{Raport - Grammatical Facial Expression}
 \author{Marek Parr, Michał Mitros}
-\date{10.01.2020}
+\date{28.01.2020}
 \maketitle
 
 \newpage
